--- a/telephones-mobiles.html
+++ b/telephones-mobiles.html
@@ -572,7 +572,7 @@
                                                         <div class="col-lg-4 offset-lg-3 col-5">
                                                             <img id="ImgTelephone" class="maxh180"
                                                                 alt="vivo Y55 128 Go noir 5G"
-                                                                src="https://medias.lapostemobile.fr/fiche_mobile/galerie/9317.png" loading="lazy">
+                                                                src="/llllll/souscription/Y55.V2.jpg" loading="lazy">
                                                             <div class="col-12 text-center h50 marg10b marg10t d-block d-lg-none">
                                                                 
                                                             </div>
