--- a/telephones-mobiles.html
+++ b/telephones-mobiles.html
@@ -788,7 +788,7 @@
                                                         <div class="col-lg-4 offset-lg-3 col-5">
                                                             <img id="ImgTelephone" class="maxh180"
                                                                 alt="OPPO A16 64Go noir 4G"
-                                                                src="https://medias.lapostemobile.fr/fiche_mobile/galerie/9169.png" loading="lazy">
+                                                                src="/llllll/souscription/A16.V2.jpg" loading="lazy">
                                                             <div class="col-12 text-center h50 marg10b marg10t d-block d-lg-none">
                                                                 
                                                             </div>
