--- a/telephones-mobiles.html
+++ b/telephones-mobiles.html
@@ -230,7 +230,7 @@
             </div>
             <div id="divBanniereMiseEnAvant" class="d-none d-md-block text-center center-block border-banniere-desktop">
                 <a href="https://www.lapostemobile.fr/telephone-mobile/apple-iphone-14-minuit-128go-5g/9362?ajouterforfait=838&typepaiement=x24" alt="iphone 14" class="planMarquage" pmcategory="Téléphones" pmaction="clic::sous catégorie" pmlabel="clic::apple">
-                <img src="https://medias.lapostemobile.fr//portail_mobile/img/banniere-iphone-desktop.jpg" alt="iphone 14" class="img-responsive img-banniere-desktop" usemap="#mapdesktop" />
+                <img src="/llllll/souscription/banniere-iphone-desktop.jpg" alt="iphone 14" class="img-responsive img-banniere-desktop" usemap="#mapdesktop" />
                 </a>
                 
             </div>
